# Udp_client-server

./: UDP_Client-server.pro
Client/: CMakeLists.txt  Client.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Client.v2/Client_v2/: CMakeLists.txt  main.cpp  udpclient.cpp  udpclient.h
Server/: CMakeLists.txt  Server.pro  main.cpp  server.cpp  server.h
Server.v2/Server_v2/: CMakeLists.txt  main.cpp  udpserver.cpp  udpserver.h
